<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.datafit.escolarex.activities.EditProfileActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/txtRfc"
                    android:hint="@string/lblRfc"
                    style="@style/textInputs"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/txtBillingCurp"
                    android:hint="@string/lblBillingCurp"
                    style="@style/textInputs"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/txtBusinessName"
                    style="@style/textInputs"
                    android:hint="@string/lblBusinessName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/txtBillingEmail"
                    android:hint="@string/lblBillingEmail"
                    android:inputType="textEmailAddress"
                    style="@style/textInputs"/>
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/lblFiscalAddressP"
                android:layout_marginTop="21dp"
                android:text="@string/lblFiscalAddress"
                style="@style/profileTitles"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/txtBillingAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lblBillingAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/txtBillingMunicipality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lblBillingMunicipality" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/txtBillingCp"
                    android:hint="@string/lblBillingCp"
                    style="@style/textInputs"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="6dp"
                android:hint="@string/lblBillingState"
                android:textSize="12sp" />
            <Spinner
                android:id="@+id/spnrBillingState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/arrayStates" />
            <LinearLayout style="@style/layoutSpinner">
                <View style="@style/horizontalLine" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
